; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/inflib/extr_infcore.c_add_section_from_token.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/inflib/extr_infcore.c_add_section_from_token.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parser = type { i64, i32*, i32, i32, i32 }

@MAX_SECTION_NAME_LEN = common dso_local global i64 0, align 8
@INF_STATUS_SECTION_NAME_TOO_LONG = common dso_local global i32 0, align 4
@INF_STATUS_NOT_ENOUGH_MEMORY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.parser*)* @add_section_from_token to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @add_section_from_token(%struct.parser* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.parser*, align 8
  %4 = alloca i32*, align 8
  store %struct.parser* %0, %struct.parser** %3, align 8
  %5 = load %struct.parser*, %struct.parser** %3, align 8
  %6 = getelementptr inbounds %struct.parser, %struct.parser* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @MAX_SECTION_NAME_LEN, align 8
  %9 = icmp sgt i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = load i32, i32* @INF_STATUS_SECTION_NAME_TOO_LONG, align 4
  %12 = load %struct.parser*, %struct.parser** %3, align 8
  %13 = getelementptr inbounds %struct.parser, %struct.parser* %12, i32 0, i32 2
  store i32 %11, i32* %13, align 8
  store i32* null, i32** %2, align 8
  br label %46

14:                                               ; preds = %1
  %15 = load %struct.parser*, %struct.parser** %3, align 8
  %16 = getelementptr inbounds %struct.parser, %struct.parser* %15, i32 0, i32 4
  %17 = load i32, i32* %16, align 8
  %18 = load %struct.parser*, %struct.parser** %3, align 8
  %19 = getelementptr inbounds %struct.parser, %struct.parser* %18, i32 0, i32 3
  %20 = load i32, i32* %19, align 4
  %21 = call i32* @InfpFindSection(i32 %17, i32 %20)
  store i32* %21, i32** %4, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = icmp eq i32* %22, null
  br i1 %23, label %24, label %39

24:                                               ; preds = %14
  %25 = load %struct.parser*, %struct.parser** %3, align 8
  %26 = getelementptr inbounds %struct.parser, %struct.parser* %25, i32 0, i32 4
  %27 = load i32, i32* %26, align 8
  %28 = load %struct.parser*, %struct.parser** %3, align 8
  %29 = getelementptr inbounds %struct.parser, %struct.parser* %28, i32 0, i32 3
  %30 = load i32, i32* %29, align 4
  %31 = call i32* @InfpAddSection(i32 %27, i32 %30)
  store i32* %31, i32** %4, align 8
  %32 = load i32*, i32** %4, align 8
  %33 = icmp eq i32* %32, null
  br i1 %33, label %34, label %38

34:                                               ; preds = %24
  %35 = load i32, i32* @INF_STATUS_NOT_ENOUGH_MEMORY, align 4
  %36 = load %struct.parser*, %struct.parser** %3, align 8
  %37 = getelementptr inbounds %struct.parser, %struct.parser* %36, i32 0, i32 2
  store i32 %35, i32* %37, align 8
  store i32* null, i32** %2, align 8
  br label %46

38:                                               ; preds = %24
  br label %39

39:                                               ; preds = %38, %14
  %40 = load %struct.parser*, %struct.parser** %3, align 8
  %41 = getelementptr inbounds %struct.parser, %struct.parser* %40, i32 0, i32 0
  store i64 0, i64* %41, align 8
  %42 = load i32*, i32** %4, align 8
  %43 = load %struct.parser*, %struct.parser** %3, align 8
  %44 = getelementptr inbounds %struct.parser, %struct.parser* %43, i32 0, i32 1
  store i32* %42, i32** %44, align 8
  %45 = load i32*, i32** %4, align 8
  store i32* %45, i32** %2, align 8
  br label %46

46:                                               ; preds = %39, %34, %10
  %47 = load i32*, i32** %2, align 8
  ret i32* %47
}

declare dso_local i32* @InfpFindSection(i32, i32) #1

declare dso_local i32* @InfpAddSection(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
